# crabwatch

./: .gitmodules  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
chapters/: README.md
chapters/01-getting_started/: README.md
chapters/02-gpios/: README.md
chapters/chapter-001/: README.md
resources/: README.md  electronics.md  programming.md
sources/chapters/01-getting_started/hello-raspberry/: Cargo.toml
sources/chapters/02-gpios/led-control/: Cargo.toml  build.rs
sources/chapters/02-gpios/led-control/src/: main.rs
sources/crates/crabwatch-libgpiod-sys/: Cargo.toml  README.md
sources/crates/crabwatch-libgpiod-sys/src/: lib.rs
